--- a/static/css/forum.css
+++ b/static/css/forum.css
@@ -11,7 +11,8 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 30vh;
+  max-height: 1500px;
+  margin-top: 50px;
 }
 
 .card2 {
@@ -95,4 +96,9 @@ h4 {
   fill: crimson;
   filter: drop-shadow(0 0 10px crimson);
   cursor: pointer;
+}
+
+.form-textarea{
+  resize: none;
+  border-radius: 7px;
 }
