--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -95,21 +95,15 @@
             <li class="nav-link basic"></li>
             {% endif %}
             <li class="nav-link">
-              <a href="">
+              <a href="https://www.youtube.com/watch?v=cf5xI0FG1_I&ab_channel=Hurvinyek" target="_blank">
                 <i class="bx bxl-youtube icon"></i>
                 <span class="text nav-text">Útmutató</span>
               </a>
             </li>
             <li class="nav-link">
-              <a href="">
+              <a href="https://www.youtube.com/watch?v=cf5xI0FG1_I&ab_channel=Hurvinyek" target="_blank">
                 <i class="bx bx-group icon"></i>
-                <span class="text nav-text">Rólunk</span>
-              </a>
-            </li>
-            <li class="nav-link">
-              <a href="">
-                <i class="bx bx-envelope icon"></i>
-                <span class="text nav-text">Kapcsolat</span>
+                <span class="text nav-text">Bemutatkozás</span>
               </a>
             </li>
           </ul>
@@ -131,6 +125,12 @@
               <a href="{% url 'profile' request.user.id %}">
                 <i class="bx bx-user icon"></i>
                 <span class="text nav-text">Fiók</span>
+              </a>
+            </li>
+            <li class="nav-link">
+              <a href="">
+                <i class="bx bx-envelope icon"></i>
+                <span class="text nav-text">Üzenetek</span>
               </a>
             </li>
             <li class="nav-link">
