--- a/store/templates/store/profile.html
+++ b/store/templates/store/profile.html
@@ -259,7 +259,11 @@
                                 </div>
                                 </div>
                                 {% if profile == self_profile %}
-                                <button class='bx bx-trash icon' onclick="deletePost({{post.id}})"></button>
+                                <form method="POST" id="deletePostForm">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="post_id" value="{{ post.id }}">
+                                    <button class='bx bx-trash icon' type="submit" name="delete_post"></button>
+                                </form>
                                 {% else %}
                                 <i class="fa-brands fa-twitter icon"></i>
                                 {% endif %}            
