--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -88,7 +88,7 @@
             <li class="nav-link basic">
               <a href="{% url 'forum' %}">
                 <i class="bx bx-conversation icon"></i>
-                <span class="text nav-text">Fórum</span>
+                <span class="text nav-text">MulaComm</span>
               </a>
             </li>
             {% else %}
@@ -128,7 +128,7 @@
               </a>
             </li>
             <li class="nav-link">
-              <a href="">
+              <a href="{% url 'messages' %}">
                 <i class="bx bx-envelope icon"></i>
                 <span class="text nav-text">Üzenetek</span>
               </a>
