--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -128,7 +128,7 @@
               </a>
             </li>
             <li class="nav-link">
-              <a href="{% url 'messages' %}">
+              <a href="{% url 'message' %}">
                 <i class="bx bx-envelope icon"></i>
                 <span class="text nav-text">Üzenetek</span>
               </a>
