--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -139,7 +139,7 @@
         <h1 class="text-center mt-5 mb-4">A Cég</h1>
         <div class="row masodikresz">
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <img src="static\images\Dáridólogo.jpg" class="img-fluid" alt="">
+                <img src="static\images\logo.png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2>Üdvözlöm a Mulatós Zene Világában!</h2><br>
