--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -59,12 +59,17 @@
     </div>
     
   </div>
-</div>
-  <div class="form-group">
-    <div class="form-check">
-      <button style="background-color: skyblue; width: 200px; margin: auto; display: block; font-weight: bold;" class="button-33 add-to-cart" role="button">Keresés</button>
-    </div>
   </div>
+    <div class="form-group">
+      <div class="form-check">
+        <button style="background-color: skyblue; width: 200px; margin: auto; display: block; font-weight: bold;" class="button-33 add-to-cart" role="button">Keresés</button>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="form-check">
+        <button style="background-color: rgb(255, 119, 0); width: 200px; margin: auto; display: block; font-weight: bold;" class="button-33 add-to-cart" role="button">Termékek újratöltése</button>
+      </div>
+    </div>
 </form>
 
 
