--- a/store/templates/store/forum.html
+++ b/store/templates/store/forum.html
@@ -73,7 +73,7 @@
           <p class="like-value">{{post.likes.all.count}}</p>
         </div>
         <div class="created">
-          <p>{{post.created}}</p>
+          <p>{{post.created|date:'Y.m.d - H:i'}}</p>
         </div>
       </div>
     </div>
