--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -76,6 +76,7 @@
 
 <div class="row" style="margin-top: 100px;" id="lightStore">
   {% for product in products %}
+  {% if product.stock > 0 %}
   {% if product.darkweb == False %}
     <div class="col-lg-4 col-md-6 col-sm-12 balance">
       <img class="thumbnail" src="{{ product.imageURL }}" />
@@ -90,7 +91,7 @@
         <hr>
         <h6 style="font-size: small; height: 30px;">{{ product.description }}</h6>
         <hr>
-        <h4><strong>{{ product.price|floatformat:0|intcomma }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
+        <h4><strong>{{ product.price|floatformat:0|intcomma }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span><br><span class="stock">Raktáron: {{ product.stock }} db</span></h4><br>
         
         <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
         <button class="button-33 view" role="button" onclick="lightopenQuickView( '{{ product.id }}', '{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
@@ -109,6 +110,7 @@
         </div>
       </div>
     </div>
+  {% endif %}
   {% endif %}
   {% endfor %}
 </div>
@@ -131,6 +133,7 @@
 
 <div class="row hidden" style="margin-top: 100px;" id="darkStore">
   {% for product in products %}
+  {% if product.stock > 0 %}
   {% if product.darkweb == True %}
     <div class="col-lg-4 col-md-6 col-sm-12 balance">
       <img class="thumbnail" src="{{ product.imageURL }}" />
@@ -164,6 +167,7 @@
         </div>
       </div>
     </div>
+  {% endif %}
   {% endif %}
   {% endfor %}
 </div>
